[gd_scene load_steps=2 format=3 uid="uid://biilrof2c6meq"]

[ext_resource type="Script" uid="uid://dm3y7iydvowj0" path="res://card_display.gd" id="1_7bi3o"]

[node name="CardDisplay" type="Node2D"]
script = ExtResource("1_7bi3o")

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 165.0
offset_right = 495.0
offset_bottom = 360.0

[node name="CardArt" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 330.0
offset_bottom = 220.0
expand_mode = 3
stretch_mode = 5

[node name="CardName" type="Label" parent="Control"]
layout_mode = 0
offset_top = 220.0
offset_right = 330.0
offset_bottom = 250.0
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardDescription" type="Label" parent="Control"]
layout_mode = 0
offset_top = 250.0
offset_right = 330.0
offset_bottom = 360.0
text = "description"
horizontal_alignment = 1
vertical_alignment = 1
